# quickres

./: .gitignore  README.md  package-lock.json  package.json  quick-res.db  quick-res.db-shm  quick-res.db-wal  turbo.json
apps/api/: .env.example  Cargo.toml  package.json  quick-res.db  quick-res.db-shm  quick-res.db-wal
apps/api/migrations/: 001_initial_schema.sql
apps/api/src/: api.rs  config.rs  db.rs  email.rs  error.rs  main.rs  models.rs
apps/web-ui/: README.md  biome.json  package.json  rsbuild.config.ts  tailwind.config.js  tsconfig.json
apps/web-ui/public/: index.html
apps/web-ui/src/: App.tsx  EventNotFound.tsx  EventReserve.tsx  EventViewer.tsx  Header.tsx  RequestReservationForm.tsx  ReservationConfirmation.tsx  Router.tsx  _10_EditEvent.tsx  _11_ManageEvent.tsx  _1_EventViewer.tsx  _2-1_EventReserve.tsx  _2-2_RequestReservationForm.tsx  _3_ReservationConfirmation.tsx  _4_VerifyEmail.tsx  _5_RetrieveReservation.tsx  _6_ScanReservation.tsx  _7_QRCodeScanner.tsx  _8_EventForm.tsx  _9_CreateEvent.tsx  index.tsx  useEvent.ts
migrations/: 001_create_events_table.sql  002_create_reservations_table.sql  003_add_verified_at_column.sql
src/: config.rs  db.rs  email.rs  error.rs  main.rs  models.rs
