[package]
name = "quick-res"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = "1.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.13.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenvy = "0.15"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
bytes = "1.0"
